[package]
name = "bansheefinder"
version = "0.1.0"
authors = ["bansheerubber <gary.cactus.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { versison = "0.1.1", features = ["async-std"] }
iced_native = "0.2"